--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.parent-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height:"100vh";
+}
